unpackaged/main/default/objects/Grease__c/Grease__c.object-meta.xml
<CustomObject>
    <label>Grease/Facetime/Trial</label>
    <nameField>
        <displayFormat>GFT-{00000}</displayFormat>
        <label>Grease ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Greases/Facetime/Trials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>