unpackaged/main/default/objects/Grease__c/fields/Chargeback_Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Credit_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chargeback Credit Card</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Payment_Method__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Payment_Method__c</referenceTo>
    <relationshipLabel>Greases/Facetime/Trials (Chargeback Credit Card)</relationshipLabel>
    <relationshipName>Greases_Facetime_Trials_Chargeback</relationshipName>
    <type>Lookup</type>
</CustomField>