unpackaged/main/default/objects/Grease__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Greases/Facetime/Trials</relationshipLabel>
    <relationshipName>Greases</relationshipName>
    <type>Lookup</type>
</CustomField>