unpackaged/main/default/objects/Grease__c/fields/Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Card</label>
    <referenceTo>Payment_Method__c</referenceTo>
    <relationshipLabel>Greases/Facetime/Trials</relationshipLabel>
    <relationshipName>Greases_Facetime_Trials</relationshipName>
    <type>Lookup</type>
</CustomField>