unpackaged/main/default/objects/Grease__c/fields/Date_Entered_in_Quickbooks__c.field-meta.xml
<CustomField>
    <fullName>Date_Entered_in_Quickbooks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Entered in Quickbooks</label>
    <type>Date</type>
</CustomField>