unpackaged/main/default/objects/Grease__c/fields/If_Marked_Up_Real_Price__c.field-meta.xml
<CustomField>
    <fullName>If_Marked_Up_Real_Price__c</fullName>
    <label>If Marked Up, Real Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>