unpackaged/main/default/objects/Grease__c/fields/Logbook__c.field-meta.xml
<CustomField>
    <fullName>Logbook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Logbook</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Greases/Facetime/Trials</relationshipLabel>
    <relationshipName>Greases_Facetime_Trials</relationshipName>
    <type>Lookup</type>
</CustomField>