unpackaged/main/default/objects/Grease__c/fields/Payment_Details__c.field-meta.xml
<CustomField>
    <fullName>Payment_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Indicate which PayPal or Venmo acct used, check #, wire info, etc.</inlineHelpText>
    <label>Payment Details</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>