unpackaged/main/default/objects/Grease__c/fields/Team_Member_Attended__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Attended__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OLD-Team Member Attended</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Greases_Facetime_Trials</relationshipName>
    <type>Lookup</type>
</CustomField>