unpackaged/main/default/objects/Grease__c/fields/Team_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Name__c</fullName>
    <label>Team Member Name - DNU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lindsi Shine</fullName>
            </value>
            <value>
                <fullName>Sarah Tredwell</fullName>
            </value>
            <value>
                <fullName>Kristen Doghramji</fullName>
            </value>
            <value>
                <fullName>Courtney Sider</fullName>
            </value>
            <value>
                <fullName>Lena Phillips</fullName>
            </value>
            <value>
                <fullName>Katie Couri</fullName>
            </value>
            <value>
                <fullName>Jenna Thompson</fullName>
            </value>
            <value>
                <fullName>Chase Alifeld</fullName>
            </value>
            <value>
                <fullName>Sofia Evangelista</fullName>
            </value>
            <value>
                <fullName>Hannah Udren</fullName>
            </value>
            <value>
                <fullName>Nora Demilta</fullName>
            </value>
            <value>
                <fullName>Heather Ramin</fullName>
            </value>
            <value>
                <fullName>Lilly Wilbanks</fullName>
            </value>
            <value>
                <fullName>Carly Walter</fullName>
            </value>
            <value>
                <fullName>Brynne Baizer</fullName>
                <isActive>false</isActive>
                <label>Brynne Baizer</label>
            </value>
            <value>
                <fullName>Dru Richardson</fullName>
                <isActive>false</isActive>
                <label>Dru Richardson</label>
            </value>
            <value>
                <fullName>Kate Kondas</fullName>
                <isActive>false</isActive>
                <label>Kate Kondas</label>
            </value>
            <value>
                <fullName>Mckenzie Scofes</fullName>
                <isActive>false</isActive>
                <label>Mckenzie Scofes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>