unpackaged/main/default/objects/Grease__c/fields/Team_Member_Name_for_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Name_for_Reimbursement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Member Name for Reimbursement</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Greases_Facetime_Trials1</relationshipName>
    <type>Lookup</type>
</CustomField>