unpackaged/main/default/objects/Grease__c/fields/Team_Member_Reimbursed__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Reimbursed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Team Member Reimbursed - DNU</label>
    <type>Checkbox</type>
</CustomField>