unpackaged/main/default/objects/Grease__c/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>