unpackaged/main/default/objects/Grease__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grease</fullName>
            </value>
            <value>
                <fullName>Facetime</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>Cancellation/No Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>